--- a/Justice/package.json
+++ b/Justice/package.json
@@ -5,5 +5,13 @@
   "main": "server.js",
   "author": {
     "name": "Greg"
+  },
+  "dependencies": {
+    "@types/jqrangeslider": "^5.7.31",
+    "bootstrap": "^4.0.0",
+    "jqrangeslider": "^5.7.5",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-google-maps": "^9.4.5"
   }
 }
