--- a/Justice/package.json
+++ b/Justice/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "@types/jqrangeslider": "^5.7.31",
+    "bootstrap": "^4.0.0",
+    "jqrangeslider": "^5.7.5",
+    "react-google-maps": "^9.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
