--- a/Justice/package.json
+++ b/Justice/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jqrangeslider": "^5.7.31",
+    "bootstrap": "^4.1.0",
+    "jqrangeslider": "^5.7.5",
+    "npm": "^5.8.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4",
-    "@types/jqrangeslider": "^5.7.31",
-    "bootstrap": "^4.0.0",
-    "jqrangeslider": "^5.7.5",
-    "react-google-maps": "^9.4.5"
+    "react-google-maps": "^9.4.5",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
