--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "justice",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jqrangeslider": "^5.7.31",
-    "bootstrap": "^4.1.0",
-    "jqrangeslider": "^5.7.5",
-    "npm": "^5.8.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
-    "react-google-maps": "^9.4.5",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
@@ -17,5 +12,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
