--- a/Justice/package.json
+++ b/Justice/package.json
@@ -3,21 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jqrangeslider": "^5.7.31",
-    "bootstrap": "^4.1.0",
-    "jqrangeslider": "^5.7.5",
-    "mongo": "^0.1.0",
-    "mongoose": "^5.0.15",
-    "npm": "^5.8.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "bootstrap": "^3.3.7",
+    "google-maps-react": "^1.1.0",
+    "googlemaps": "^1.12.0",
+    "rc-slider": "^8.6.1",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.32.1",
+    "react-collapsible": "^2.2.0",
+    "react-dom": "^15.6.1",
+    "react-dual-rangeslider": "^1.2.16",
     "react-google-maps": "^9.4.5",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.0.13",
+    "react-sidebar": "^2.3.2",
+    "react-table": "^6.8.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "google-maps": "^3.2.1"
   }
 }
