--- a/react-backend/client/package.json
+++ b/react-backend/client/package.json
@@ -7,9 +7,11 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.32.1",
     "react-collapsible": "^2.2.0",
+    "react-dialog": "^1.0.2",
     "react-dom": "^15.6.1",
     "react-dual-rangeslider": "^1.2.16",
     "react-google-maps": "^9.4.5",
+    "react-modal-dialog": "^4.0.7",
     "react-scripts": "1.0.13",
     "react-sidebar": "^2.3.2",
     "react-table": "^6.8.2"
@@ -20,6 +22,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-  }
+  "proxy":"http://localhost:3001"
 }
